# StarFetch_Core

./: README.cn.md  README.md  install.ps1  install.sh
.github/workflows/: Release.yml
StarFetch/: Cargo.toml
StarFetch/src/: hyperlink.rs  main.rs  system.rs
winget/: README.md
winget/manifests/l/Linus-Shyu/StarFetch/0.2.3/: Linus-Shyu.StarFetch.installer.yaml
