[package]
name = "starfetch"
version = "0.2.3"
edition = "2021"
description = "A fast and stylish system information fetch tool."
authors = ["Linus Shyu <0x11@linusshyu.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Linus-Shyu/StarFetch_Core"

[dependencies]
ansi_term = "0.12"
sysinfo = "0.38.0"
systemstat = "0.2"
terminal_size = "0.4.3"
clap = { version = "4.5", features = ["derive"] }

# === Debian/Ubuntu 打包配置 ===
[package.metadata.deb]
maintainer = "Linus Shyu <0x11@linusshyu.dev>"
section = "utils"
priority = "optional"
extended-description = """
StarFetch is a high-performance system information tool written in Rust.
Part of the Star Lake AI ecosystem, designed for speed and aesthetic.
"""
license-file = ["LICENSE", "4"] # 确保根目录有 LICENSE 文件

# 必须显式列出二进制：指定 assets 后会替换默认 $auto，不写则 .deb 里没有 /usr/bin/starfetch
# target/release/ 会被 cargo-deb 替换为实际路径（含 cross 的 target/xxx/release/）
assets = [
    ["target/release/starfetch", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/starfetch/README", "644"],
]

depends = "$auto"
